--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   "dependencies": {
     "@react-native-community/hooks": "^2.8.1",
     "@react-native-community/masked-view": "^0.1.11",
-    "@react-native-masked-view/masked-view": "^0.2.6",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/drawer": "^6.4.1",
     "@react-navigation/native": "^6.0.10",
@@ -21,6 +20,7 @@
     "react": "17.0.2",
     "react-native": "0.68.0",
     "react-native-gesture-handler": "^2.4.2",
+    "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-modal": "^13.0.1",
     "react-native-reanimated": "^2.8.0",
     "react-native-safe-area-context": "^4.2.5",
