--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,6 +23,8 @@ target 'APP' do
 
   pod 'react-native-webview', :path => '../node_modules/react-native-webview'
 
+  pod 'react-native-restart', :path => '../node_modules/react-native-restart'
+
   target 'APPTests' do
     inherit! :complete
     # Pods for testing
