--- a/package.json
+++ b/package.json
@@ -25,7 +25,9 @@
     "react-native-gesture-handler": "^2.4.2",
     "react-native-image-header-scroll-view": "^0.10.3",
     "react-native-modal": "^13.0.1",
+    "react-native-popup-menu": "^0.15.12",
     "react-native-reanimated": "^2.8.0",
+    "react-native-restart": "^0.0.24",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-native-vector-icons": "^9.1.0",
